# voxels

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Definitions.h  OpenSimplexNoise.hpp  Utility.h  enums.h
include/glad/: glad.h
include/renderer/: Callbacks.h  Camera.h  IndexBuffer.h  Shader.h  Texture.h  Vertex.h  VertexArray.h  VertexBuffer.h
include/voxels/: Block.h  Blocks.h  Camera.h  Chunk.h  Crosshair.h  Game.h  Hash.h  MeshBuilder.h  MeshData.h  Sun.h  World.h
resources/shaders/: crosshair.frag  crosshair.vert  main.frag  main.vert  sun.frag  sun.vert
src/: Main.cpp  Utility.cpp
src/renderer/: Camera.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp
src/voxels/: Block.cpp  Camera.cpp  Chunk.cpp  Crosshair.cpp  Game.cpp  MeshBuilder.cpp  Sun.cpp  World.cpp
